fix ol alignment

--- a/styles/modules/_typography.css
+++ b/styles/modules/_typography.css
@@ -141,7 +141,7 @@ ul {
   }
 }
 
-ol {
+ 
   .rc & {
     @apply pl-8 text-base leading-normal list-none;
     counter-reset: count;
